style: Feature and updates related to styling

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <div class="container-fluid h-100">
     <div class="row">
       <div class="col-sm-4" id="grey">
-        <img class="rounded-circle mx-auto mb-3" src="profile.jpg" >
+        <img class="rounded-circle mx-auto mb-3" src="images/profile-img.jpg" alt="profile-image" >
         <h3><strong>Scott Wilder:</strong></h3>
         <div class="icons">
         <div><h5><i class="fa fa-briefcase fa-lg"></i>Software Support Engineer</h5></div>
@@ -45,6 +45,8 @@
         <div><h5><i class="fa fa-home fa-lg"></i>Bethesda, MD</h5></div>
         <div><h5><i class="fa fa-linkedin-square fa-lg"></i><a href="https://www.linkedin.com/in/scott-wilder-6b6541140/">linkedin</a></h5></div>
         <div><h5><i class="fa fa-github-square fa-lg"></i><a href="https://github.com/Scott-Wilder">GitHub</a></h5></div>
+        <div><h5><i class="fa fa-building fa-lg"></i><a href="http://bethesdait.com/">Business Site</a></h5></div>
+       
         </div>
     </div>
 
