resume and image updates

--- a/resume/index.html
+++ b/resume/index.html
@@ -106,55 +106,34 @@
 								<div class="card-body">
 								  <h4 class="card-title">Website</h4>
 								  <p class="card-text">HTML/Host Documentation</p>
-								  <a href="#" class="btn btn-primary">See GitHub</a>
+								  <a href="https://github.com/Scott-Wilder/scott-wilder.com" class="btn btn-primary">See GitHub</a>
 								</div>
 							  </div>
 							</div>
 					<div class="col-lg-3">
 						<div class="card">
-							<img class="card-img-top" src="ethereum.png" alt="Card image">
+							<img class="card-img-top" src="version-4.png" alt="Card image">
 							<div class="card-body">
-							  <h4 class="card-title">Ethereum</h4>
-							  <p class="card-text">Solidity and Ethereum 2.0 docs</p>
-							  <a href="https://github.com/Scott-Wilder/Ethereum-Solidity-SmartContract" class="btn btn-primary">See GitHub</a>
+							  <h4 class="card-title">JS Vending Machine</h4>
+							  <p class="card-text">Vanilla JavaScript implementation of the vending machine</p>
+							  <a href="https://github.com/Scott-Wilder/js-vending-machine" class="btn btn-primary">See GitHub</a>
 							</div>
 						  </div>
 						</div>
 					<div class="col-lg-3">
 						<div class="card">
-							<img class="card-img-top" src="awsimg.png" alt="Card image">
+							<img class="card-img-top" src="mobile-active.png" alt="Card image">
 							<div class="card-body">
-							  <h4 class="card-title">AWS-Webapp</h4>
-							  <p class="card-text">Webapp hosted with AWS</p>
-							  <a href="https://github.com/Scott-Wilder/AWS-webapp" class="btn btn-primary">See GitHub</a>
+							  <h4 class="card-title">JS tip calculator</h4>
+							  <p class="card-text">Vanilla JavaScript implementation of a tip calculator</p>
+							  <a href="https://github.com/Scott-Wilder/fem-tip-calculator" class="btn btn-primary">See GitHub</a>
 							</div>
 						  </div>
 						</div>
 					</div>
 				</div>
 			</div>
-
-
-
-
-
-
-
 			</div>
 		</div>		
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 	</body>
 </html>
