resume image path fix

--- a/resume/index.html
+++ b/resume/index.html
@@ -102,7 +102,7 @@
 					<div class="row">
 						<div class="col-lg-3">
 							<div class="card">
-								<img class="card-img-top" src="projectimg1.png" alt="Card image">
+								<img class="card-img-top" src="resume/projectimg1.png" alt="Card image">
 								<div class="card-body">
 								  <h4 class="card-title">Website</h4>
 								  <p class="card-text">HTML/Host Documentation</p>
@@ -112,7 +112,7 @@
 							</div>
 					<div class="col-lg-3">
 						<div class="card">
-							<img class="card-img-top" src="version-4.png" alt="Card image">
+							<img class="card-img-top" src="resume/version-4.png" alt="Card image">
 							<div class="card-body">
 							  <h4 class="card-title">JS Vending Machine</h4>
 							  <p class="card-text">Vanilla JavaScript implementation of the vending machine</p>
@@ -122,7 +122,7 @@
 						</div>
 					<div class="col-lg-3">
 						<div class="card">
-							<img class="card-img-top" src="mobile-active.png" alt="Card image">
+							<img class="card-img-top" src="resume/mobile-active.png" alt="Card image">
 							<div class="card-body">
 							  <h4 class="card-title">JS tip calculator</h4>
 							  <p class="card-text">Vanilla JavaScript implementation of a tip calculator</p>
