--- a/resume/index.html
+++ b/resume/index.html
@@ -77,7 +77,7 @@
 									<li>HTML</li>
 									<li>CSS</li>
 									<li>JS</li>
-									<li>Ajax</li>
+									<li>React</li>
 								</ul>
 							</div>
 						</div>
@@ -88,10 +88,7 @@
 								<h4>Back End</h4>
 								<ul>
 									<li>Java</li>
-									<li>Python</li>
 									<li>MySQL</li>
-									<li>VPS</li>
-									<li>API's</li>
 								</ul>
 							</div>
 						</div>
